fix(style): button text not centered anymore

--- a/src/components/elements/button/Button.module.css
+++ b/src/components/elements/button/Button.module.css
@@ -19,4 +19,5 @@
   height: 48px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
